[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Themes/Nodes/Normal/Utility.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Themes/Nodes/Selected/UtilitySelected.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/GraphNode.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/Nodes/Normal/line.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.243137, 0.243137, 0.286275, 1 )

[node name="Comment" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.204
margin_top = -240.228
margin_right = -177.204
margin_bottom = -165.228
mouse_filter = 1
custom_styles/frame = ExtResource( 1 )
custom_styles/selectedframe = ExtResource( 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_constants/port_offset = 0
title = "Comment Node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="Lines" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 33.0
margin_right = 191.0
margin_bottom = 63.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
alignment = 2

[node name="LineEdit" type="TextEdit" parent="Lines"]
margin_right = 181.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_colors/breakpoint_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.678431, 0.678431, 0.678431, 1 )
text = "// comment"
wrap_enabled = true
caret_blink = true

[connection signal="close_request" from="." to="." method="_on_Node_close_request"]
[connection signal="dragged" from="." to="." method="_on_Node_dragged"]
[connection signal="resize_request" from="." to="." method="_on_Node_resize_request"]
[connection signal="resized" from="." to="." method="_on_Node_resized"]
[connection signal="text_changed" from="Lines/LineEdit" to="." method="_on_Node_text_changed"]
