[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Themes/Nodes/Normal/Option.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Themes/Nodes/Selected/OptionSelected.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/GraphNode.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/Nodes/Normal/line.tres" type="StyleBox" id=4]

[node name="Option" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -216.0
margin_right = 6.0
margin_bottom = -149.0
mouse_filter = 1
custom_styles/frame = ExtResource( 1 )
custom_styles/selectedframe = ExtResource( 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_constants/port_offset = 0
title = "Option Node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="Lines" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 33.0
margin_right = 138.0
margin_bottom = 57.0

[node name="LineEdit" type="LineEdit" parent="Lines"]
margin_right = 128.0
margin_bottom = 24.0
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
placeholder_text = "Player Option"
caret_blink = true

[connection signal="close_request" from="." to="." method="_on_Node_close_request"]
[connection signal="dragged" from="." to="." method="_on_Node_dragged"]
[connection signal="raise_request" from="." to="." method="_on_Node_raise_request"]
[connection signal="resize_request" from="." to="." method="_on_Node_resize_request"]
[connection signal="text_changed" from="Lines/LineEdit" to="." method="_on_Node_line_changed"]
